--- a/src/File_css/Acceuil.css
+++ b/src/File_css/Acceuil.css
@@ -1,8 +1,6 @@
 @import "../File_css/Resset.css";
 
-/* .Body{
-    z-index: -1;
-} */
+
 .Pub{
     display: flex;
     justify-content: center;
@@ -16,34 +14,245 @@
 
 }
 
+
+/* recommandation */
 .recommande{
     /* transform:translateY(150px); */
     margin-top: 60px;
     width: 100%;
-    height: 120px;
+    height: 190px;
     background-color: var(--colorSectionmid);
+    display: flex;
+    justify-content: center;
+
+}
+.reh1{
+    font-size: 20px;
+    font-family: var(--font_syne);
+    color: var(--colorTitle);
+    transform: translate(0px,-15px);
+    font-weight: 100;
+}
+.conteneur-rec{
+    width: 95%;
+    height: 100%;
+    /* background-color: beige; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.conteneur-Aff{
+    width: 90%;
+    height: 100%;
+    /* background-color: aqua; */
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+    gap: 10px;
+}
+.Arrow{
+    width: 20px;
+    height: 50px;
+    cursor: pointer;
+}
+.secondaire1{
+    width: 50px;
+    height: 70px;
+    background-color: burlywood;
+    transform: translate(-30px,70px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.second-1{
+    width: 100px;
+    height: 100px;
+   
+}
+.Aff-main{
+    position: relative;
+    width: 90px;
+    height: 110px;
+    /* background-color: burlywood; */
+    transform: translateY(30px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5px;
+    align-items: center;
+}
+.lueur{
+    position: absolute;
+    width: 200px;
+    bottom: 55px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #B38017;
+    filter: blur(30px);
+    z-index: -1;
+}
+.title{
+    font-family: var(--font_syne);
+    text-align: center;
+    font-size: 7px;
+    /* transform: translateY(10px); */
+    width: 150px;
+    /* border: 1px solid black; */
+}
+.sound{
+    width: 60px;
+    height: 60px;
 }
 
+.Main-Aff{
+    width: 145px;
+    height: 220px;
+    
+}
+.secondaire2{
+    width: 50px;
+    height: 70px;
+    background-color: burlywood;
+    transform: translate(30px,65px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.second-2{
+    width: 100px;
+    height: 95px;
+}
+/* recommandation */
+
+
+/* Instrumental */
 .instrumental{
-    /* transform:translateY(200px); */
     margin-top: 50px;
     width: 100%;
     height: 250px;
     background-color: var(--colorSectionmid);
 }
+/* Instrumental */
 
+
+
+/* Message */
 .message{
-    /* transform:translateY(275px); */
     margin-top: 70px;
     width: 100%;
-    height: 250px;
+    height: 230px;
     background-color: var(--colorSectionmid);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.title-mess{
+    font-size: 20px;
+    font-family: var(--font_syne);
+    color: var(--colorTitle);
+    transform: translate(-90px,-35px);
+    font-weight: 100;
+}
+.contactez{
+    width: 85%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    /* align-items: center; */
 }
 
-.commentaire{
-    /* transform:translateY(300px); */
-    margin-top: 60px;
-    width: 100%;
-    height: 250px;
-    background-color: var(--colorSectionmid);
+.namemail{
+    display: flex;
+    gap: 25px;
 }
+.input{
+    
+    font-size: 18px;
+    height: 25px;
+    font-family: var(--font_inder);
+    color: var(--colorTitle);
+    border: none;
+    border-bottom: 1.8px solid var(--colorTitle);
+    background-color: var(--colorSectionmid); 
+}
+.name{
+    width: 100px;
+}
+.email{
+    width: 190px;
+}
+.send{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 110px;
+    height: 36px;
+    padding: 5px;
+    font-size: 10px;
+    gap: 2px;
+    background-color: var(--colorTitle);
+    transform: translateX(200px);
+    
+}
+.IconeSend{
+    width: 30px;
+    height: 20px;
+}
+/* Message */
+
+
+
+/* commentaire */
+.commentaire{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 5px;
+    margin-top: 40px;
+    width: 100%;
+    height: 210px;
+    background-color: var(--colorSectionmid);
+    margin-bottom: 30px;
+}
+
+.title-com{
+    font-size: 20px;
+    font-family: var(--font_syne);
+    color: var(--colorTitle);
+    transform: translate(-100px,-15px);
+    font-weight: 100;
+}
+.form_com{
+    position: relative;
+}
+.Send_com{
+    position: absolute;
+    right: 18px;
+    top: 10px;
+    width: 20px;
+}
+.input-com{
+    font-family: var(--font_inder);
+    width: 350px;
+    height: 40px;
+    padding: 5px;
+    border-radius: 8px;
+    border: none;
+    background-color: #F6F6F6;
+    color: #1e40ba;
+    box-shadow: 0px 1px 40px 2px rgba(0, 0, 0, 0.15);
+}
+.Box-com{
+    margin-top: 10px;
+    /* border: 1px solid black; */
+    border: transparent;
+    width: 80%;
+    height: 150px;
+}
+/* commentaire */
+
