--- a/src/File_css/navBar.css
+++ b/src/File_css/navBar.css
@@ -157,8 +157,8 @@
 
 .toggle-bar-down{
     position: absolute;
-    background-color: rgb(0, 0, 0);
-    height: 1445px;
+    background-color: #fbfbfb;
+    height: 1388px;
     width: 60%;
     transform: translateX(-100%);
     z-index: -4;
