--- a/src/File_css/Resset.css
+++ b/src/File_css/Resset.css
@@ -32,7 +32,7 @@
 
 :root{
     --colorMain:#4E67C2;
-    --colorTitle:#3981B8;
+    --colorTitle:#4E67C2;
     --colorSection:#F6F6F6;
     --colorSectionmid:rgba(246,246,246,.49);
     --colorB:black;
