--- a/src/File_css/Acceuil.css
+++ b/src/File_css/Acceuil.css
@@ -65,12 +65,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
 }
 .second-1{
     width: 80px;
     height: 100px;
-   
+
 }
 .Aff-main{
     width: 90px;
@@ -109,7 +109,7 @@
 .Main-Aff{
     width: 145px;
     height: 220px;
-    
+
 }
 .secondaire2{
     width: 50px;
@@ -133,7 +133,7 @@
     /* justify-content: center; */
     align-items: center;
     flex-direction: column;
-    margin-top: 50px;
+    margin-top: 100px;
     width: 100%;
     height: 400px;
     background-color: var(--colorSectionmid);
@@ -156,7 +156,7 @@
 }
 
 .content-instru{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 100%;
     height: 85%;
     font-size: 13px;
@@ -200,20 +200,62 @@
     flex-direction: column;
     gap: 10px;
     margin-top: 60px;
-    font-size: 10px;
+    
+    font-size: 12px;
     font-family: var(--font_inder);
 }
 
 .vue{
     display: flex;
-    border: 1px solid black;
-    width: 400px;
+    /* border: 1px solid black; */
+    width: 360px;
     height: 25px;
 }
+.bar{
+    
+    width: 290px;
+    height: 0px;
+    border: 1px solid black;
+    transform: translate(35px,-12px);
+}
+.place2 , .place3 , .place4{
+    margin-top: 20px;
+}
+.content-t{
+    display: flex;
+    margin-left: 10px;
+   margin-bottom: 5px;
+    gap: 20px;
+}
 
+.t-i{
+    transform: translate(10px,-7px);
+}
+.t-t{
+    transform: translate(10px,-7px);
+}
+.t-b{
+    transform: translate(10px,-7px);
+}
+.t-ty{
+    transform: translate(10px,-7px);
+}
 .image{
-    margin-left: 20px;
+    margin-left: 5px;
     transform: translateY(-27px);
+}
+
+.icone{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translate(2px,-5px);
+    
+}
+
+.biff{
+    transform: translateY(-2px);
+    cursor: pointer;
 }
 /* Instrumental */
 
@@ -252,14 +294,14 @@
     gap: 25px;
 }
 .input{
-    
+
     font-size: 18px;
     height: 25px;
     font-family: var(--font_inder);
     color: var(--colorTitle);
     border: none;
     border-bottom: 1.8px solid var(--colorTitle);
-    background-color: var(--colorSectionmid); 
+    background-color: var(--colorSectionmid);
 }
 .name{
     width: 100px;
@@ -278,7 +320,7 @@
     gap: 2px;
     background-color: var(--colorTitle);
     transform: translateX(200px);
-    
+
 }
 .IconeSend{
     width: 30px;
